# void-backend

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  main.py  models.py  output.m4a  pyproject.toml  requirements.txt  run_inference.py  schemas.py  start_services.sh  test_data.txt  test_data2.txt  test_transcription.py
db/: models.py  schemas.py
migrations/: env.py
migrations/versions/: 08812979068d_add_relationship_to_audio_log_for_.py  1d775b1a1857_implicitly_create_events_thoughts.py  2487e1a316b3_change_transcription_audio_logs.py  3c1ce5ca1f75_add_default_value_to_system_notes.py  624ec1ffd74a_fresh_start.py  67dbb819b08e_add_relationship_to_audio_log_for_.py  7a38afa13400_add_transcriptions.py  8a5bd979af23_add_fields_to_transcriptions.py  8f0b938b3954_add_relationship_to_audio_log_for_.py  a502419d035a_add_assemblyai_id.py  c6e1025096d7_add_relationship_to_audio_log_for_.py  d65577133ba8_add_relationship_to_audio_log_for_.py  d72a246427e8_first.py  e3049ab4dc8b_add_relationship_to_audio_log_for_.py  fad542e97d13_first_migration.py
routes/: audio_logs.py  auth.py  events.py  things.py  thoughts.py  transcriptions.py  user.py
utils/: celery_utils.py  extensions.py  inference.py  prompts.py  s3_utils.py  tasks.py  transcription.py  wait_for_postgres.py
